--- a/frontend/product.css
+++ b/frontend/product.css
@@ -113,3 +113,12 @@
     margin-top: -30px;
     font-size: 17px;
 }
+#login-or-not{
+    font-weight: bold;
+    text-decoration: underline;
+   text-align: center;
+   font-size: 17px;
+   background-color: rgb(230, 232, 230);
+   padding-top: 5px;
+   padding-bottom: 5px;
+}
